--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
     rev: 7.2.0
     hooks:
       - id: flake8
-        args: [--max-line-length=88, --extend-ignore=E203, W503]
+        args: [--max-line-length=88, "--extend-ignore=E203, W503"]
         
   - repo: https://github.com/kynan/nbstripout
     rev: 0.8.1
