--- a/config/openai_config.json
+++ b/config/openai_config.json
@@ -1,5 +1,5 @@
 {
-  "model": "gpt-4o-mini",
+  "model": "gpt-4o-mini-2024-07-18",
   "temperature": 0,
-  "max_tokens": 1000
+  "max_completion_tokens": 1000
 }
